[package]
name = "mirage-provisioner"
version = "0.1.0"
edition = "2021"
description = "MIRAGE domain provisioner: CDN lifecycle, manifest signing, health monitoring"
license = "Apache-2.0 OR MIT"

[[bin]]
name = "mirage-provisioner"
path = "src/main.rs"

[dependencies]
mirage-core = { path = "../mirage-core" }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for Cloudflare API + monitoring probes
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
postcard = { version = "1", features = ["alloc"] }

# Crypto
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"

# Encoding
base64 = "0.22"

# Error handling
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
