[package]
name = "mirage-server"
version = "0.1.0"
edition = "2021"
description = "MIRAGE protocol server: authenticated HTTP/2 relay with cover site"
license = "Apache-2.0 OR MIT"

[[bin]]
name = "mirage-server"
path = "src/main.rs"

[dependencies]
mirage-core = { path = "../mirage-core" }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

# HTTP/2
h2 = "0.4"
http = "1"
bytes = "1"

# HTTP client for cover site proxy
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2"] }

# TLS
tokio-rustls = "0.26"
rustls-pemfile = "2"

# CLI
clap = { version = "4", features = ["derive"] }

# Config
toml = "0.8"
serde = { version = "1", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Error handling
anyhow = "1"

# Crypto key parsing
base64 = "0.22"
x25519-dalek = { version = "2", default-features = false, features = ["static_secrets"] }
ed25519-dalek = "2"

# Serialization for manifest/control messages
postcard = { version = "1", features = ["alloc"] }
